syntax = "proto3";
option go_package = "./";

package Task;

service Tasks {
    rpc FindByTaskID (FindByTaskIDRequest) returns (FindByTaskIDResponse);
    rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse);
    rpc UpdateTask (UpdateTaskRequest) returns (UqdateTaskResponse);
    rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskResponse);
    rpc FindAllTasks (FindAllTasksRequest) returns (FindAllTasksResponse);
}

message FindByTaskIDRequest {
    string id = 1;
}

message FindByTaskIDResponse {
    Task task = 1;
}

message CreateTaskRequest {
    Task task = 1;
}

message CreateTaskResponse {
    Task task = 1;
}

message UpdateTaskRequest {
    Task task = 1;
}

message UqdateTaskResponse {
    Task task = 1;
}

message DeleteTaskRequest {
    string id = 1;
}

message DeleteTaskResponse {
    string id = 1;
}

message FindAllTasksRequest {}

message FindAllTasksResponse {
  repeated Task task = 1;
}

message Task {
    string id = 1;
    string name = 2;
    string start_time = 3;
    string end_time = 4;
    string calendar_id = 5;
    string timed = 6;
    string description = 7;
    string color = 8;
    string created_at = 9;
}
